--- a/src/components/Fondo.astro
+++ b/src/components/Fondo.astro
@@ -1,8 +1,6 @@
 <style>
   body {
-    background-color: var(--background-color);
-    background-image: linear-gradient(to right, #f0f0f0 1px, transparent 1px),
-      linear-gradient(to bottom, #f0f0f0 1px, transparent 1px);
+
     background-size: 6rem 4rem;
     z-index: -20;
   }
@@ -18,7 +16,7 @@
     filter: blur(100px);
     background: radial-gradient(
       circle at 50% 100%,
-      rgba(0, 102, 255, 0.5),
+      rgb(0, 153, 255),
       rgba(76, 0, 255, 0)
     );
     opacity: .1;
