--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -8,7 +8,7 @@ import BotonRecargar from "./BotonRecargar.astro";
 <article>
   <header class="flex flex-col gap-y-4 lg:flex-row mb-6">
     <h2
-      class="flex items-center font-bold underline underline-offset-[10px] text-1xl lg:text-3xl text-center gap-1"
+      class="flex items-center font-bold underline underline-offset-[10px] text-1xl lg:text-3xl text-center gap-1 dark:text-slate-100"
     >
       Todos los Programas<img
         src="/emojis/rocket.webp"
