--- a/src/components/BotonesPrincipales.astro
+++ b/src/components/BotonesPrincipales.astro
@@ -3,6 +3,7 @@
     href="#"
     title="Para realizar esta funcionalidad primero necestiamos que soft-share llegue a los 100 recursos. Ayúdame a hacer esto posible 😝"
     class="proximamente gap-1"
+    id="programas-destacados-desabilitado"
     >Programas destacados <img
       src="/emojis/corona.webp"
       class="size-5"
@@ -32,7 +33,7 @@
     font-weight: bold;
     padding: 6px 14px;
     border-radius: 6px;
-    color: var(--text-color);
+    color: black;
     background: #fff;
     border: none;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
@@ -100,5 +101,54 @@
     top: 5px;
     font-size: 16px;
     backdrop-filter: blur(5px);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    a {
+      box-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.8);
+    }
+    a:hover {
+      box-shadow: 0px 1px 10px 1px rgba(255, 255, 255, 0.3);
+      cursor: pointer;
+    }
+
+    .proximamente {
+      color: rgba(0, 0, 0, 0.5);
+      background: #c7c7c7e3;
+      border: none;
+      box-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.8);
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      transition:
+        box-shadow,
+        color 0.3s ease;
+      text-decoration: none;
+
+      &:hover {
+        box-shadow: 0px 1px 10px 1px rgba(255, 255, 255, 0.3);
+        color: rgba(0, 0, 0, 0.3);
+        cursor: not-allowed;
+        background: #ffffff77;
+      }
+    }
+    .proximamente::before {
+      content: "🚧 Próximamente 🚧";
+      position: absolute;
+      top: 25px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 14px;
+      font-weight: 600;
+      color: white;
+      text-align: center;
+      white-space: nowrap;
+      transition: all 0.3s ease;
+    }
+    .proximamente:hover::before {
+      top: 5px;
+      font-size: 16px;
+      backdrop-filter: blur(5px);
+    }
   }
 </style>
