--- a/src/components/SubirPrograma.astro
+++ b/src/components/SubirPrograma.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Subir Programa">
   <main id="UploadProgram" class="mt-12">
-    <h1 class="font-bold text-3xl lg:text-6xl text-center">
+    <h1 class="font-bold text-3xl lg:text-6xl text-center ">
       Agrega Tus Programas
     </h1>
 
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
           title="Ingresa el nombre de tu soft 🚀 (máximo 20 caracteres)"
           required
         />
-        <label for="nombre">Nombre</label>
+        <label class="text-red" for="nombre">Nombre</label>
       </div>
 
       <div class="input-group">
@@ -60,7 +60,7 @@ import Layout from "../layouts/Layout.astro";
           target="_blank"
           no-referrer
           title="Si quieres saber que representa cada categoría, dame click 😺"
-          ><img src="assets/info.svg" alt="info" class="size-5" /></a
+          ><img class="dark:invert" src="assets/info.svg" alt="info" class="size-5" /></a
         >
         <h3 class="flex items-center">Categoría</h3>
         <!-- The second value will be selected initially -->
@@ -77,7 +77,7 @@ import Layout from "../layouts/Layout.astro";
           <option value="Estilo">Estilo</option>
           <option value="Gestión de archivos">Gestión de archivos</option>
         </select>
-        <span class="text-gray-600 text-sm font-bold"
+        <span class="text-gray-600 dark:text-gray-400 text-sm font-bold"
           >Segunda categoría opcional</span
         >
         <select name="select2" id="select-categoria2">
@@ -301,7 +301,7 @@ import Layout from "../layouts/Layout.astro";
     width: 100%;
     height: 40px;
     font-size: 16px;
-    color: #000;
+    color: var(--reverse);
     padding: 0 15px;
     background: transparent;
     border: 2px solid #ccc;
@@ -310,7 +310,7 @@ import Layout from "../layouts/Layout.astro";
     transition: all 0.3s ease;
 
     &:focus {
-      border-color: black;
+      border-color: var(--reverse);
     }
   }
 
@@ -401,4 +401,13 @@ import Layout from "../layouts/Layout.astro";
     background: rgb(230, 230, 230);
     font-weight: normal;
   }
+
+  @media (prefers-color-scheme: dark) {
+    .input-group input {
+      border: 2px solid #4d4d4d;
+    }
+    .input-group label {
+      color: rgba(255, 255, 255, .85);
+    }
+   }
 </style>
