--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,25 +9,29 @@ import AlertaError from "../components/AlertaError.astro";
 import AlertaExito from "../components/AlertaExito.astro";
 import Ayuda_y_Controles from "../components/Ayuda_y_Controles.astro";
 import Fondo from "../components/Fondo.astro";
-
-// JS
 ---
 
 <Layout title="Soft-Share - Repositorio de tus Programas">
-  <Fondo></Fondo>
+  <Fondo />
   <Ayuda_y_Controles />
-  <main class="w-11/12 lg:w-9/12">
-    <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl">Soft-Share</h1>
+  <main class="w-11/12 lg:w-9/12 text-[var(--text-color)]">
+    <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl dark:text-slate-100">Soft-Share</h1>
     <p
       class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
       style="line-height: 1.5rem"
     >
-      <span style="color: #0047aa">Explora</span>,
-      <span style="color: #008f39">Descarga</span>
+      <span class="text-[#0047aa] dark:text-[#0096aa] saturate-200"
+        >Explora</span
+      >,
+      <span class="text-[#008f39] dark:text-[#008f5f] saturate-200"
+        >Descarga</span
+      >
       y
-      <span style="color: #6200a8">Comparte</span>
+      <span class="text-[#6200a8] dark:text-[#6200a8] saturate-200"
+        >Comparte</span
+      >
       recursos informáticos. Desde script básicos hasta software completo y crackeado.
-      <span style="color: #bd00aa">Aquí</span>
+      <span class="text-[#bd00aa] dark:text-[#9700bd] saturate-200">Aquí</span>
       puedes
       <span> conseguir y compartir </span>
       con los
@@ -62,6 +66,12 @@ import Fondo from "../components/Fondo.astro";
     p.presentation {
       text-align: center;
       backdrop-filter: blur(1px);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      span {
+        text-shadow: 1px 1px rgba(255, 255, 255, 0.25);
+      }
     }
   </style>
 </Layout>
