Cambio de estilos y arreglo de favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Fondo from "../components/Fondo.astro";
   <Fondo />
   <Ayuda_y_Controles />
   <main class="w-11/12 lg:w-9/12 text-[var(--text-color)]">
-    <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl dark:text-slate-100">Soft-Share</h1>
+    <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl dark:text-slate-100 bg-gradient-to-r dark:from-slate-100 dark:to-slate-400 from-slate-950 to-slate-500 text-transparent dark:text-transparent bg-clip-text">Soft-Share</h1>
     <p
       class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
       style="line-height: 1.5rem"
