Cambio en el fondo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { title } = Astro.props;
   <!-- https://bg.ibelick.com/ -->
   <!-- Background de las líneas -->
   <body
-    class="bg-[var(--background-color)] bg-[linear-gradient(to_right,_#f0f0f0_1px,_transparent_1px),_linear-gradient(to_bottom,_#f0f0f0_1px,_transparent_1px)] dark:bg-none"
+    class="bg-[var(--background-color)] bg-[linear-gradient(to_right,_#f0f0f0_1px,_transparent_1px),_linear-gradient(to_bottom,_#f0f0f0_1px,_transparent_1px)] dark:bg-[linear-gradient(to_right,_#000_1px,_transparent_1px),_linear-gradient(to_bottom,_#000_1px,_transparent_1px)]"
   >
     <slot />
   </body>
