--- a/src/components/AgregarComentario.astro
+++ b/src/components/AgregarComentario.astro
@@ -14,7 +14,7 @@ import Layout from "../layouts/Layout.astro";
       </h2>
     </article>
 
-    <form id="formularioDeComentario">
+    <form id="formularioDeComentario flex flex-col justify-center items-center">
       <div class="input-group">
         <input
           type="text"
@@ -39,7 +39,6 @@ import Layout from "../layouts/Layout.astro";
       </div>
 
       <button
-        class="font-bold p-0 after:font-bold"
         type="submit"
         id="enviar-comentario"></button>
     </form>
@@ -172,7 +171,14 @@ import Layout from "../layouts/Layout.astro";
 </script>
 <style>
   :root {
-    --bg-color: white;
+    --font: "Poppins", sans-serif;
+
+    /* LIGHT MODE COLORS */
+    --bg-color: #fbfbfe;
+    --text-color: #000000;
+    --text-gray: #666;
+    --blue: #2f27ce;
+    --reverse: rgb(0, 0, 0);
     --conic-gradient: conic-gradient(
       #ff2e2e,
       #ff831e,
@@ -184,6 +190,15 @@ import Layout from "../layouts/Layout.astro";
       #ff1556
     );
   }
+
+  html.dark {
+    --bg-color: #1a1a1a;
+    --text-color: #d1d5db;
+    --text-gray: #aaa;
+    --blue: #8f94ff;
+    --reverse: rgb(255, 255, 255);
+  }
+  
 
   main {
     display: flex;
@@ -213,7 +228,7 @@ import Layout from "../layouts/Layout.astro";
     left: 15px;
     transform: translateY(-50%);
     font-size: 16px;
-    color: black;
+    color: var(--text-color);
     padding: 0 5px;
     pointer-events: none;
     transition: 0.5s;
@@ -223,24 +238,24 @@ import Layout from "../layouts/Layout.astro";
     width: 100%;
     height: 40px;
     font-size: 16px;
-    color: var(--reverse);
+    color: var(--text-color);
     padding: 0 15px;
     background: transparent;
     border: 2px solid #ccc;
     outline: none;
     border-radius: 5px;
     transition: all 0.3s ease;
+  }
 
-    &:focus {
-      border-color: var(--reverse);
-    }
+  .input-group input:focus {
+    border-color: var(--text-color);
   }
 
   .input-group input:focus ~ label,
   .input-group input:valid ~ label {
     top: 0;
     font-size: 14px;
-    background-color: var(--background-color);
+    background-color: var(--bg-color);
   }
 
   #nombre {
@@ -251,17 +266,15 @@ import Layout from "../layouts/Layout.astro";
     height: 2.5em;
     width: 7.5em;
     border-radius: 10px;
-    font-weight: bold;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    border: 2px solid black;
     cursor: pointer;
-    transition:
-      transform,
-      box-shadow 0.3s ease;
+    border: 2px solid black;
+    transition: transform, box-shadow 0.3s ease;
+    align-self: center;
   }
 
   button:hover {
@@ -269,7 +282,7 @@ import Layout from "../layouts/Layout.astro";
   }
 
   button::before {
-    content: "";
+     content: "";
     position: absolute;
     width: 110%;
     height: 350%;
@@ -279,7 +292,7 @@ import Layout from "../layouts/Layout.astro";
   button::after {
     content: "Comentar";
     position: absolute;
-    background-color: var(--bg-color);
+    background-color: white;
     width: 95%;
     height: 89%;
     border-radius: 0.4em;
@@ -287,8 +300,10 @@ import Layout from "../layouts/Layout.astro";
     color: black;
     font-weight: bold;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    transition: 0.3s ease;
+    z-index: 1;
   }
 
   button:hover::before {
@@ -307,12 +322,4 @@ import Layout from "../layouts/Layout.astro";
     }
   }
 
-  @media (prefers-color-scheme: dark) {
-    .input-group input {
-      border: 2px solid #4d4d4d;
-    }
-    .input-group label {
-      color: rgba(255, 255, 255, .85);
-    }
-   }
 </style>
