--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -20,8 +20,12 @@ const { title } = Astro.props;
       content="Software, Subir, Descargar, Donwload, Upload, Share"
     />
     <!-- Icono -->
-    <link rel="icon" href="/assets/favicon.png" type="image/png" sizes="24x24" />
     <link
+      rel="icon"
+      href="/assets/logoSF.svg"
+      type="image/svg+xml"
+      sizes="24x24"
+      <link
       rel="icon"
       href="/readme images/a5.svg"
       type="image/svg+xml"
@@ -38,12 +42,14 @@ const { title } = Astro.props;
   <!-- https://bg.ibelick.com/ -->
   <!-- Background de las líneas -->
   <body
-    class="bg-[var(--background-color)] bg-[linear-gradient(to_right,_#f0f0f0_1px,_transparent_1px),_linear-gradient(to_bottom,_#f0f0f0_1px,_transparent_1px)] dark:bg-[linear-gradient(to_right,_#000_1px,_transparent_1px),_linear-gradient(to_bottom,_#000_1px,_transparent_1px)]"
+    class="text-black dark:bg-[#1a1a1a] dark:text-gray-200
+         bg-[linear-gradient(to_right,_#f0f0f0_1px,_transparent_1px),_linear-gradient(to_bottom,_#f0f0f0_1px,_transparent_1px)]
+         dark:bg-[linear-gradient(to_right,_#000_1px,_transparent_1px),_linear-gradient(to_bottom,_#000_1px,_transparent_1px)]"
   >
     <slot />
   </body>
   <style is:global>
-    :root {
+    /* :root {
       color-scheme: light dark;
       --background-color: #fbfbfe;
       --text-color: #00000;
@@ -60,8 +66,7 @@ const { title } = Astro.props;
         --blue: #8f94ff;
         --reverse: rgb(255, 255, 255);
       }
-    }
-
+    } */
     @font-face {
       font-family: "geist";
       src: url("/fonts/GeistVF.woff2");
@@ -117,6 +122,109 @@ const { title } = Astro.props;
         Bitstream Vera Sans Mono,
         Courier New,
         monospace;
+    }
+
+    article.contenedor {
+      display: grid;
+      gap: 9px 3px;
+    }
+
+    @media (max-width: 730px) {
+      article.contenedor {
+        grid-template-columns: 100%;
+      }
+    }
+    @media (min-width: 730px) and (max-width: 1200px) {
+      article.contenedor {
+        grid-template-columns: 50% 50%;
+      }
+    }
+    @media (min-width: 1200px) {
+      article.contenedor {
+        grid-template-columns: 33.33% 33.33% 33.33%;
+      }
+    }
+
+    div.div-container {
+      padding: 10px;
+    }
+
+    h3 {
+      font-size: 19px;
+      font-weight: bold;
+      text-shadow: 1px 1px rgba(0, 0, 0, 0.1);
+    }
+
+    article.contenedor {
+      display: grid;
+      gap: 9px 3px;
+    }
+
+    header {
+      display: flex;
+      gap: 4px;
+      align-items: center;
+    }
+
+    img {
+      height: 32px;
+      width: auto;
+      object-fit: cover;
+      border-radius: 2px;
+    }
+
+    article span {
+      color: #666666;
+      margin-top: 5px;
+      width: 98%;
+      display: block;
+      overflow-wrap: break-word;
+      text-shadow: 1px 1px rgba(0, 0, 0, 0.178);
+    }
+
+    html.dark article span {
+      color: #94a3b8;
+      text-shadow: 1px 1px rgba(255, 255, 255, 0.25);
+    }
+
+    #formularioDeProgramas article {
+      margin: 40px;
+    }
+
+    #formularioDeProgramas h4 {
+      font-size: 1.4rem;
+    }
+
+    #formularioDeProgramas p {
+      color: gray;
+    }
+
+    #notFound404 {
+      grid-column: span 3 / span 3;
+    }
+
+    /* Mostrar u ocultar los spans que muestran las categorías */
+    .show {
+      background-color: black;
+      color: white;
+      font-weight: bold;
+      transition: all 0.3s ease;
+      text-decoration: underline;
+    }
+    .not-show {
+      background-color: rgba(128, 128, 128, 0.253);
+      color: black;
+      font-weight: normal;
+      transition: all 0.4s ease;
+      text-decoration: none;
+      border-radius: 2px;
+    }
+
+    .mostrarSpanCategorias {
+      display: block;
+    }
+    .ocultarSpanCategorias {
+      display: none;
     }
   </style>
 </html>
