--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,21 @@ import AlertaError from "../components/AlertaError.astro";
 import AlertaExito from "../components/AlertaExito.astro";
 import Ayuda_y_Controles from "../components/Ayuda_y_Controles.astro";
 import Fondo from "../components/Fondo.astro";
+import ThemeToggle from "../components/ThemeToggle.astro";
 ---
 
 <Layout title="Soft-Share - Repositorio de tus Programas">
   <Fondo />
   <Ayuda_y_Controles />
   <main class="w-11/12 lg:w-9/12 text-[var(--text-color)]">
-    <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl dark:text-slate-100 bg-gradient-to-r dark:from-slate-100 dark:to-slate-400 from-slate-950 to-slate-500 text-transparent dark:text-transparent bg-clip-text">Soft-Share</h1>
+    <h1
+      class="font-bold mt-2 pb-0 text-5xl lg:text-7xl dark:text-slate-100 bg-gradient-to-r dark:from-slate-100 dark:to-slate-400 from-slate-950 to-slate-500 text-transparent dark:text-transparent bg-clip-text"
+    >
+      Soft-Share
+    </h1>
+     <div class="flex justify-end">
+      <ThemeToggle />
+     </div>
     <p
       class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
       style="line-height: 1.5rem"
@@ -47,9 +55,6 @@ import Fondo from "../components/Fondo.astro";
   </main>
 
   <style>
-    span {
-      text-shadow: 1px 1px rgba(0, 0, 0, 0.178);
-    }
     body {
       padding-bottom: 100px;
     }
@@ -66,12 +71,6 @@ import Fondo from "../components/Fondo.astro";
     p.presentation {
       text-align: center;
       backdrop-filter: blur(1px);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      span {
-        text-shadow: 1px 1px rgba(255, 255, 255, 0.25);
-      }
     }
   </style>
 </Layout>
