Mejor ubicación para cambiar el modo

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -6,7 +6,7 @@ import SystemIcon from "./icons/System.astro"
 const THEMES = ["Light", "Dark", "System"]
 ---
 
-<div class="relative ml-1 mr-1 bottom-14 self-end z-50">
+<div class="fixed ml-1 mr-1 top-6 self-end z-50">
   <button
     transition:persist
     id="theme-toggle-btn"
