--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -226,5 +226,10 @@ const { title } = Astro.props;
     .ocultarSpanCategorias {
       display: none;
     }
+
+      /* Centrar el hamster */
+  .wheel-and-hamster {
+    grid-column: 1 / -1;
+  }
   </style>
 </html>
