Cambio de color en el select del usario según el modo que tenga seleccionado

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -95,6 +95,10 @@ const { title } = Astro.props;
       color: white;
       background-color: black;
     }
+    html.dark ::selection {
+      color: black;
+      background-color: white;
+    }
 
     /* Estilos de elementos principales */
 
