--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -119,7 +119,7 @@
     />
     <label
       for="Gestión de archivos"
-      class="p-1 bg-gray-600/20 dark:bg-gray-800 rounded-xl px-2 lg:col-span-1 md:col-span-2 xl:col-span-3"
+      class="p-1 bg-gray-600/20 dark:bg-gray-800 rounded-xl px-2 md:col-span-2 xl:col-span-3"
       >Gestión de Archivos</label
     >
   </section>
@@ -178,7 +178,8 @@
     transition: all 0.4s ease;
     user-select: none;
     cursor: pointer;
-    display: inline-block;
+    padding: 2px 5px;
+    line-height: 2;
   }
 
   .allCategories input:checked + label {
