--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,56 +9,74 @@ import AlertaError from "../components/AlertaError.astro";
 import AlertaExito from "../components/AlertaExito.astro";
 import Ayuda_y_Controles from "../components/Ayuda_y_Controles.astro";
 import Fondo from "../components/Fondo.astro";
-import ThemeToggle from "../components/ThemeToggle.astro";
+import AlternarTema from "../components/AlternarTema.astro";
+import GitHub from "../components/icons/GitHub.astro";
+import Youtube from "../components/icons/Youtube.astro";
 ---
 
 <Layout title="Soft-Share - Repositorio de tus Programas">
-  <Fondo />
-  <Ayuda_y_Controles />
-  <main class="w-11/12 lg:w-9/12 text-[var(--text-color)]">
-    <h1
-      class="font-bold mt-2 pb-0 text-5xl lg:text-7xl dark:text-slate-100 bg-gradient-to-r dark:from-slate-100 dark:to-slate-400 from-slate-950 to-slate-500 text-transparent dark:text-transparent bg-clip-text"
-    >
-      Soft-Share
-    </h1>
-     <div class="flex justify-end">
-      <ThemeToggle />
-     </div>
-    <p
-      class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
-      style="line-height: 1.5rem"
-    >
-      <span class="text-[#0047aa] dark:text-[#0096aa] saturate-200"
-        >Explora</span
-      >,
-      <span class="text-[#008f39] dark:text-[#008f5f] saturate-200"
-        >Descarga</span
+  <main class="grid-cols grid-cols-[1fr,auto] w-11/12 lg:w-9/12 h-full">
+    <Fondo />
+    <Ayuda_y_Controles />
+    <main class="text-[var(--text-color)] pb-24">
+      <h1
+        class="font-bold mt-2 pb-0 text-5xl lg:text-7xl dark:text-slate-100 bg-gradient-to-r dark:from-slate-100 dark:to-slate-400 from-slate-950 to-slate-500 text-transparent dark:text-transparent bg-clip-text"
       >
-      y
-      <span class="text-[#6200a8] dark:text-[#6200a8] saturate-200"
-        >Comparte</span
+        Soft-Share
+      </h1>
+      <div class="flex justify-end">
+        <AlternarTema />
+      </div>
+      <p
+        class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
+        style="line-height: 1.5rem"
       >
-      recursos informáticos. Desde script básicos hasta software completo y crackeado.
-      <span class="text-[#bd00aa] dark:text-[#9700bd] saturate-200">Aquí</span>
-      puedes
-      <span> conseguir y compartir </span>
-      con los
-      <span>demás.</span>
-    </p>
-    <BotonesPrincipales />
-    <ProgramasDestacados />
-    <SubirPrograma />
-    <AgregarComentario />
-    <SeccionDeComentarios />
-    <AlertaError />
-    <AlertaExito />
+        <span class="text-[#0047aa] dark:text-[#0096aa] saturate-200"
+          >Explora</span
+        >,
+        <span class="text-[#008f39] dark:text-[#008f5f] saturate-200"
+          >Descarga</span
+        >
+        y
+        <span class="text-[#6200a8] dark:text-[#6200a8] saturate-200"
+          >Comparte</span
+        >
+        recursos informáticos. Desde script básicos hasta software completo y crackeado.
+        <span class="text-[#bd00aa] dark:text-[#9700bd] saturate-200">Aquí</span
+        >
+        puedes
+        <span> conseguir y compartir </span>
+        con los
+        <span>demás.</span>
+      </p>
+      <BotonesPrincipales />
+      <ProgramasDestacados />
+      <SubirPrograma />
+      <AgregarComentario />
+      <SeccionDeComentarios />
+      <AlertaError />
+      <AlertaExito />
+    </main>
+    <footer class="flex justify-around">
+      <a
+        href="https://github.com/IGnacho12/Soft-Share"
+        target="_blank"
+        class="inline-block hover:scale-125 transition-transform"
+      >
+        <GitHub />
+      </a>
+      <span class="italic text-gray-800 dark:text-slate-200/50 pb-2">Con cariño nacho</span>
+      <a
+        href="https://www.youtube.com/@1x1Pixel-z2x"
+        target="_blank"
+        class="inline-block hover:scale-125 transition-transform"
+      >
+        <Youtube />
+      </a>
+    </footer>
   </main>
 
   <style>
-    body {
-      padding-bottom: 100px;
-    }
-
     main {
       display: flex;
       flex-direction: column;
