Centrando un texto del footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ import Youtube from "../components/icons/Youtube.astro";
       <AlertaError />
       <AlertaExito />
     </main>
-    <footer class="flex justify-around">
+    <footer class="flex justify-around items-center">
       <a
         href="https://github.com/IGnacho12/Soft-Share"
         target="_blank"
@@ -65,7 +65,7 @@ import Youtube from "../components/icons/Youtube.astro";
       >
         <GitHub />
       </a>
-      <span class="italic text-gray-800 dark:text-slate-200/50 pb-2">Con cariño nacho</span>
+      <span class="italic text-gray-800 dark:text-slate-200/50">Con cariño nacho</span>
       <a
         href="https://www.youtube.com/@1x1Pixel-z2x"
         target="_blank"
