fix: update import paths for global and md styles; add Vercel adapter dependency

--- a/src/pages/[id]-problema.astro
+++ b/src/pages/[id]-problema.astro
@@ -1,6 +1,6 @@
 ---
 import LayoutMD from "../layouts/LayoutMD.astro";
-import "./src/styles/md.css";
+import "../styles/md.css";
 
 const { id } = Astro.params;
 
