fix: añadir emoji al título de la página principal

--- a/src/layouts/LayoutMD.astro
+++ b/src/layouts/LayoutMD.astro
@@ -11,7 +11,7 @@ import { ClientRouter } from "astro:transitions";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Soft Share - Repositorio de tus programas</title>
+    <title>Soft Share - Repositorio de tus programas 🤓</title>
     <ClientRouter />
   </head>
   <body class="flex flex-col min-h-screen relative">
