--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,77 +1,3 @@
----
-import Layout from "../layouts/Layout.astro";
-import Button from "../components/Button.astro";
----
-
-<Layout>
-  <main class="w-10/12 mx-auto py-8">
-    <h1 class="text-4xl font-bold text-center mb-6">Bienvenido a Soft Share</h1>
-    <p class="text-lg">
-      Este es un espacio dedicado a compartir software y recursos útiles para tu
-      PC. Aquí encontrarás todo lo que necesitas para optimizar tu experiencia
-      informática.🤓
-    </p>
-    <hr />
-
-    <article class="flex flex-col gap-4 mt-8">
-      <section>
-        <div class="flex items-center">
-          <a href="">
-            <h3>Programas</h3>
-          </a>
-          <img class="size-8 dark:invert" src="click.webp" alt="" />
-        </div>
-
-        <p>
-          <span class="text-[#0047aa] dark:text-[#0096aa] saturate-200"
-            >Explora</span
-          >,
-          <span class="text-[#008f39] dark:text-[#008f5f] saturate-200"
-            >Descarga</span
-          >
-          y
-          <span class="text-[#6200a8] dark:text-[#6200a8] saturate-200"
-            >Comparte</span
-          >
-          recursos informáticos. Desde script básicos hasta software completo y crackeado.
-          <span class="text-[#bd00aa] dark:text-[#9700bd] saturate-200"
-            >Aquí</span
-          >
-          puedes
-          <span> conseguir y compartir </span>
-          con los
-          <span>demás.</span>
-        </p>
-      </section>
-
-      <section>
-        <div class="flex items-center">
-          <a href="">
-            <h3>Problemas & soluciones</h3>
-          </a>
-          <img class="size-8 dark:invert" src="click.webp" alt="" />
-        </div>
-
-        <p>
-          Encuentra una variedad de solucinoes a problemas comunes de software y
-          hardware.
-        </p>
-      </section>
-
-      <section>
-        <div class="flex items-center">
-          <a href="">
-            <h3>Guías de Rendimiento</h3>
-          </a>
-          <img class="size-8 dark:invert" src="click.webp" alt="" />
-        </div>
-
-        <p>
-          Mejora el rendimiento de tu PC con nuestras guías. Aprende a optimizar
-          tu sistema.
-        </p>
-      </section>
-    </article>
-  </main>
-  <div class="h-128"></div>
-</Layout>
+<script>
+  window.location.href = '/programas';
+</script>
