--- a/src/pages/problemas&soluciones.astro
+++ b/src/pages/problemas&soluciones.astro
@@ -5,26 +5,21 @@ import { problemas } from '../pages/problemas/problems';
 ---
 
 <Layout title="Problemas & Soluciones">
-  <main class="w-10/12 mx-auto">
+  <main class="w-10/12 max-w-4xl mx-auto mt-6">
     <h1
-        class="font-bold mt-2 pb-0 text-5xl lg:text-7xl bg-gradient-to-r dark:from-slate-100 dark:to-slate-400 from-slate-950 to-slate-500 text-transparent dark:text-transparent bg-clip-text text-center"
-      >
-        PROBLEMAS & SOLUCIONES
-      </h1>
+      class="font-bold pb-4 text-4xl lg:text-5xl bg-gradient-to-r dark:from-slate-100 dark:to-slate-400 from-slate-950 to-slate-500 text-transparent bg-clip-text text-center"
+    >
+      PROBLEMAS & SOLUCIONES
+    </h1>
 
-    <section class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-4">
-      {
-        problemas.map((problema) => (
-          <ProblemaCard
-            key={problema.id}
-            titulo={problema.titulo}
-            descripcion={problema.descripcion}
-            videoId={problema.videoId}
-            videoUrl={problema.videoUrl}
-            linkProblema={`${problema.titulo}-problema`}
-          />
-        ))
-      }
-    </section>
+    <ul class="space-y-3">
+      {problemas.map(problema => (
+        <ProblemaCard
+          key={problema.id}
+          titulo={problema.titulo}
+          descripcion={problema.descripcion}
+        />
+      ))}
+    </ul>
   </main>
 </Layout>
